<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/appBG">

    <LinearLayout
        android:id="@+id/ll_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:gravity="center"
        android:background="@drawable/edittext_bg"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_type"
            android:textSize="14sp"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/tv_filetype"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableRight="@mipmap/export_right_tw"
            android:gravity="right"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="@color/title_3_color"/>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_type"
        android:layout_marginLeft="10dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp">

        <LinearLayout
            android:id="@+id/ll_headerTo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_fileformatTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:gravity="left|center"
                    android:text="@string/file_format"
                    android:textColor="@color/gray"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/tv_fileformatTo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="6dp"
                    android:drawableRight="@mipmap/export_right_tw"
                    android:ems="5"
                    android:gravity="right"
                    android:padding="6dp"
                    android:textColor="@color/title_3_color"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/ll_SeparateCharTo"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sperator"
                    android:textSize="12sp"
                    android:gravity="left|center"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/gray"/>

                <EditText
                    android:id="@+id/et_SeparateCharTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="6dp"

                    android:ems="6"
                    android:gravity="right"
                    android:textColor="@color/title_3_color"
                    android:textSize="12sp"
                    android:lines="1"/>
            </LinearLayout>

        </LinearLayout>

        <CheckBox
            android:layout_below="@id/ll_headerTo1"
            android:layout_width="wrap_content"

            android:text="@string/contain_totle"

            android:id="@+id/ckb_hasTitleto"
            android:background="@null"
            android:textSize="12sp"

            android:textColor="@color/gray"
            android:layout_height="25dp"/>




    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_header"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_sys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="12sp"
            android:visibility="gone"
            android:hint="显示消息"
            android:textColor="@color/gray"
            android:layout_alignParentBottom="true"
            android:text="上次同步成功\n2015-08-24 12:00:00"/>
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ll_info"
        android:background="@color/menu_line_color"/>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/top_bar_color"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_save"
            android:padding="12dp"
            android:text="@string/app_button_save"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/top_bar_color"
            />
    </LinearLayout>


    <ListView
        android:id="@+id/lv_data"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/line"
        android:layout_above="@id/ll_bottom"
        android:divider="@color/menu_line_color"
        tools:listitem="@layout/item_list_format_out"
        android:dividerHeight="0.5dp"/>





</RelativeLayout>